crates/parser/tests/cases/snapshots/cases__errors__number_end_with_underscore.snap
---
source: crates/parser/tests/cases/errors.rs
expression: "err_string(stringify!(number_end_with_underscore), functions::parse_stmt,\n    \"42_42_\")"

---
error: invalid syntax in function body
  ┌─ number_end_with_underscore:1:6
  │
1 │ 42_42_
  │      ^ unexpected token


